--- a/Youtube-clone/src/Pages/Video/Video.css
+++ b/Youtube-clone/src/Pages/Video/Video.css
@@ -9,3 +9,12 @@
     flex-wrap: wrap;
     
 }
+
+
+@media (max-width:900px){
+    .play-container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    
+}
