--- a/Gemini-clone/src/Components/Main/Main.css
+++ b/Gemini-clone/src/Components/Main/Main.css
@@ -104,3 +104,59 @@
     font-weight: 300;
     color: #c4c7c5;
 }
+.result{
+    padding: 0px 5%;
+    max-height: 70vh;
+    overflow: scroll;  
+}
+.result::-webkit-scrollbar{
+    display: none;
+}
+.result-title{
+    margin: 40px 0px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.result-title p{
+    color: #fff;
+    font-weight: 600;
+}
+.result img{
+    width: 40px;
+    border-radius: 50%;
+}
+.result-data{
+    display: flex;
+    align-items: start;
+    gap: 20px;
+}
+.result-data p{
+    color: #fff;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 1.7;
+}
+.loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color: #f6f7f8;
+    background: linear-gradient(to right,#9ed7ff,#232222,#9ed7ff);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+@keyframes loader{
+    0%{
+        background-position: -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
