--- a/Gemini-clone/src/Components/Sidebar/Sidebar.css
+++ b/Gemini-clone/src/Components/Sidebar/Sidebar.css
@@ -3,8 +3,9 @@
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #f0f4f9;
+    background-color: #131313;
     padding: 25px 15px;
+    color: #e2e6eb;
 }
 .sidebar img{
     width: 20px;
@@ -13,6 +14,10 @@
      display: block;
      margin-left: 10px;
      cursor: pointer;
+     filter: invert();
+}
+.icon{
+    filter: invert();
 }
 .sidebar .new-chat{
     margin-top: 50px;
@@ -41,9 +46,10 @@
     padding: 10px;
     padding-right: 40px;
     border-radius: 50px;
-    color: #282828;
+    color: #e0d8d8;
     cursor: pointer;
 }
 .sidebar .recent-entry:hover{
     background-color: #e2e6eb;
+    color: #131313;
 }
